<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGreen"
    android:columnCount="2"
    android:rowCount="5">

    <TextView
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp"
        android:fontFamily="sans-serif"
        android:text="@string/settings"
        android:textColor="@color/grey"
        android:textSize="24dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:contentDescription="profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/bgGreen"
        android:src="@drawable/ava" />

    <TextView
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="88dp"
        android:fontFamily="sans-serif"
        android:text="@string/userprofile"
        android:textColor="@color/grey"
        android:textSize="18dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="47dp"
        android:layout_height="36dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:background="@color/bgGreen"
        android:contentDescription="profile"
        android:text="@string/buttongoto"
        android:textColor="@color/grey"
        android:textSize="24dp" />

    <TextView
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/datetime"
        android:textColor="@color/grey"
        android:textSize="18dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/datetime"
        android:layout_width="44dp"
        android:layout_height="37dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/bgGreen"
        android:contentDescription="@string/datetime"
        android:onClick="ToCalendar"
        android:text="@string/buttongoto"
        android:textColor="@color/grey"
        android:textSize="24dp" />

    <TextView
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/soundsettings"
        android:textColor="@color/grey"
        android:textSize="18dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="44dp"
        android:layout_height="38dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/bgGreen"
        android:contentDescription="@string/soundsettings"
        android:text="@string/buttongoto"
        android:textColor="@color/grey"
        android:textSize="24dp" />

    <TextView
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/checkupdates"
        android:textColor="@color/grey"
        android:textSize="18dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/bgGreen"
        android:text="@string/buttongoto"
        android:textColor="@color/grey"
        android:textSize="24dp" />

</GridLayout>