<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bgGreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="23dp"
            android:fontFamily="sans-serif"
            android:text="@string/edit"
            android:textColor="@color/grey"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@color/bgGreen"
            android:contentDescription="toCalend"
            android:onClick="Back"
            android:src="@drawable/button_back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_rad5">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="@string/title"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="39dp"
                android:background="@drawable/rectangle_left"
                android:src="@drawable/alarm"></ImageView>

            <ScrollView
                android:id="@+id/time"
                android:layout_width="159dp"
                android:layout_height="39dp"
                android:background="@drawable/rectangle_right"
                android:paddingLeft="10dp"
                android:autofillHints="16:30">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextClock
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="16:30"
                    android:textSize="18sp"
                    android:textColor="@color/grey"/>
                    <TextClock
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="16:30"
                        android:textSize="18sp"
                        android:textColor="@color/grey"/>
                    <TextClock
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="17:00"
                        android:textSize="18sp"
                        android:textColor="@color/grey"/>
                    <TextClock
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="17:30"
                        android:textSize="18sp"
                        android:textColor="@color/grey"/>
                    <TextClock
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="18:00"
                        android:textSize="18sp"
                        android:textColor="@color/grey"/>
                    <TextClock
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="18:30"
                        android:textSize="18sp"
                        android:textColor="@color/grey"/>
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="39dp"
                    android:background="@drawable/rectangle_left"
                    android:src="@drawable/calendar"></ImageView>

                <ScrollView
                    android:id="@+id/date"
                    android:layout_width="159dp"
                    android:layout_height="39dp"
                    android:background="@drawable/rectangle_right"
                    android:paddingLeft="10dp"
                    android:autofillHints="16:30">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextClock
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="01.01.2021"
                            android:textSize="18sp"
                            android:textColor="@color/grey"/>
                        <TextClock
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="16:30"
                            android:textSize="18sp"
                            android:textColor="@color/grey"/>
                        <TextClock
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="17:00"
                            android:textSize="18sp"
                            android:textColor="@color/grey"/>
                        <TextClock
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="17:30"
                            android:textSize="18sp"
                            android:textColor="@color/grey"/>
                        <TextClock
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="18:00"
                            android:textSize="18sp"
                            android:textColor="@color/grey"/>
                        <TextClock
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="18:30"
                            android:textSize="18sp"
                            android:textColor="@color/grey"/>
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="96dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_rad5">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="@string/description"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_delete"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:textColor="@color/white">

        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/write"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_save"
            android:text="@string/write"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:textColor="@color/white">

        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

</LinearLayout>
